changes DataProviderJDBC and added more tests